force-app/main/default/objects/Daily_Record_Log__c/Daily_Record_Log__c.object-meta.xml
<CustomObject>
    <label>Daily Record Log</label>
    <nameField>
        <displayFormat>DR-{0000000}</displayFormat>
        <label>Daily Record Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Record Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>