force-app/main/default/objects/Daily_Record_Log__c/fields/Daily_Calories_Burned__c.field-meta.xml
<CustomField>
    <fullName>Daily_Calories_Burned__c</fullName>
    <label>Daily Calories Burned</label>
    <summarizedField>Exercise_Log__c.Total_Calories_Burned__c</summarizedField>
    <summaryForeignKey>Exercise_Log__c.Daily_Record_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>