force-app/main/default/objects/Daily_Record_Log__c/fields/Daily_Calories_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Daily_Calories_Consumed__c</fullName>
    <label>Daily Calories Consumed</label>
    <summarizedField>Meal_Log__c.Total_Calories__c</summarizedField>
    <summaryForeignKey>Meal_Log__c.Daily_Record_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>