force-app/main/default/objects/Daily_Record_Log__c/fields/Health_Profile__c.field-meta.xml
<CustomField>
    <fullName>Health_Profile__c</fullName>
    <label>Health Profile</label>
    <referenceTo>Health_Profile__c</referenceTo>
    <relationshipLabel>Daily Record Logs</relationshipLabel>
    <relationshipName>Daily_Record_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>