force-app/main/default/objects/Daily_Record_Log__c/fields/Net_Calories__c.field-meta.xml
<CustomField>
    <fullName>Net_Calories__c</fullName>
    <formula>Daily_Calories_Consumed__c - Daily_Calories_Burned__c</formula>
    <label>Net Calories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>