force-app/main/default/objects/Daily_Record_Log__c/fields/Total_Daily_Calories__c.field-meta.xml
<CustomField>
    <fullName>Total_Daily_Calories__c</fullName>
    <label>Total Daily Calories</label>
    <summarizedField>Meal_Log__c.Total_Calories__c</summarizedField>
    <summaryForeignKey>Meal_Log__c.Daily_Record_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>